swagger get describe get requests in swagger fix clips controller
