# public/swagger/swagger.json
@@ -54,6 +54,255 @@
                     }
                 }
             }
+        },
+        "/clips/{clip_id}": {
+            "get": {
+                "summary": "Get clip",
+                "description": "Get clip by id",
+                "operationId": "getClip",
+                "parameters": [
+                    {
+                        "name": "clip_id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/Clip"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/videos": {
+            "get": {
+                "summary": "Get videos",
+                "description": "Get videos",
+                "operationId": "getVideos",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "default": 1
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/PaginationContainer"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/Video"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/videos/{video_id}/clips": {
+            "get": {
+                "summary": "Get clips by video id",
+                "description": "Get clips by video id",
+                "operationId": "getVideoClips",
+                "parameters": [
+                    {
+                        "name": "video_id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "default": 1
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/PaginationContainer"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/Clip"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/videos/{video_id}/logs": {
+            "get": {
+                "summary": "Get video logs",
+                "description": "Get video logs by id",
+                "operationId": "getProcessingLogs",
+                "parameters": [
+                    {
+                        "name": "video_id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/ProcessingLog"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/videos/{video_id}/clip-by-timing":{
+            "get": {
+                "summary": "Get clip by it's timing in video",
+                "description": "Get clip by it's timing in video",
+                "operationId": "getClipByTiming",
+                "parameters": [
+                    {
+                        "name": "video_id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "timing",
+                        "in": "query",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/Clip"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -120,12 +369,12 @@
                 },
                 "created_at": {
                     "type": "string",
-                    "example":"2025-03-13T02:20:17.000000Z",
+                    "example": "2025-03-13T02:20:17.000000Z",
                     "description": "datetime in utc"
                 },
                 "updated_at": {
                     "type": "string",
-                    "example":"2025-03-13T02:20:17.000000Z",
+                    "example": "2025-03-13T02:20:17.000000Z",
                     "description": "datetime in utc"
                 }
             },
@@ -133,11 +382,158 @@
                 "name": "Video"
             }
         },
+        "Clip": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64",
+                    "minimum": 1
+                },
+                "title": {
+                    "type": "string"
+                },
+                "video_path": {
+                    "type": "string"
+                },
+                "thumb_path": {
+                    "type": "string"
+                },
+                "subs": {
+                    "type": [
+                        "null",
+                        "object"
+                    ],
+                    "example": {
+                        "rus": "path/to/rus/subs.srt",
+                        "eng": "path/to/eng/subs.srt"
+                    }
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "2025-03-13T02:20:17.000000Z",
+                    "description": "datetime in utc"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2025-03-13T02:20:17.000000Z",
+                    "description": "datetime in utc"
+                }
+            },
+            "xml": {
+                "name": "Clip"
+            }
+        },
+        "ProcessingLog": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64",
+                    "minimum": 1
+                },
+                "instance_id": {
+                    "type": "integer",
+                    "format": "int64",
+                    "minimum": 1
+                },
+                "type": {
+                    "type": "string"
+                },
+                "logs": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "2025-03-13T02:20:17.000000Z",
+                    "description": "datetime in utc"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2025-03-13T02:20:17.000000Z",
+                    "description": "datetime in utc"
+                }
+            },
+            "xml": {
+                "name": "ProcessingLog"
+            }
+        },
         "Error": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "PaginationContainer": {
+            "type": "object",
+            "properties": {
+                "current_page": {
+                    "type": "integer",
+                    "minimum": 1
+                },
+                "data": {
+                    "type": "array",
+                    "items": {}
+                },
+                "first_page_url": {
+                    "type": "string"
+                },
+                "from": {
+                    "type": "integer",
+                    "nullable": true
+                },
+                "last_page": {
+                    "type": "integer"
+                },
+                "last_page_url": {
+                    "type": "string"
+                },
+                "links": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "url": {
+                                "type": "string",
+                                "nullable": true
+                            },
+                            "label": {
+                                "type": "string"
+                            },
+                            "active": {
+                                "type": "boolean"
+                            }
+                        }
+                    }
+                },
+                "next_page_url": {
+                    "type": "string",
+                    "nullable": true
+                },
+                "path": {
+                    "type": "string"
+                },
+                "per_page": {
+                    "type": "integer"
+                },
+                "prev_page_url": {
+                    "type": "string",
+                    "nullable": true
+                },
+                "to": {
+                    "type": "integer",
+                    "nullable": true
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         }
